# nntrainer

./: meson.build
.github/workflows/: nnt_testhub.yml
Applications/: meson.build
Applications/LLaMA/PyTorch/: LLaMAv2.py
Applications/LLaMA/jni/: main.cpp  meson.build  (+4 more)
Applications/Transformer/: README.md  commit.txt  main.cpp  meson.build  run_experiment.sh  run_pytorch_experiment.sh
Applications/Transformer/res/: calc.py  gen_input.sh
Applications/utils/: mem_usage.sh
nntrainer/: app_context.cpp  meson.build
nntrainer/graph/: network_graph.cpp
nntrainer/layers/: activation_layer.cpp  addition_layer.cpp  addition_layer.h  attention_layer.cpp  attention_layer.h  batchwise_dot_product_layer.cpp  batchwise_dot_product_layer.h  bn_layer.cpp  bn_layer.h  common_properties.cpp  common_properties.h  conv2d_layer.cpp  embedding.cpp  fc_layer.cpp  meson.build  multi_head_attention_layer.cpp  multi_head_attention_layer.h  multiout_layer.cpp
nntrainer/models/: model_loader.cpp  neuralnet.cpp
nntrainer/tensor/: bcq_tensor.cpp  manager.cpp  manager.h  memory_pool.cpp  memory_pool.h  meson.build  optimized_v1_planner.cpp  tensor.cpp  tensor.h  tensor_pool.cpp  tensor_pool.h  tensor_wrap_specs.h
nntrainer/utils/: meson.build  tracer.h
packaging/: nntrainer.spec
test/ccapi/: unittest_ccapi.cpp
test/input_gen/: genModelTests_v2.py  genModelsMultiout_v2.py  transLayer_v2.py  transformer.py
test/tizen_capi/: unittest_tizen_capi.cpp
test/unittest/: unittest_nntrainer_tensor.cpp  unittest_nntrainer_tensor_fp16.cpp  unittest_nntrainer_tensor_pool.cpp
(+9 files in other folders)
